Fix results align

--- a/src/components/resultDay/resultDay.css
+++ b/src/components/resultDay/resultDay.css
@@ -1,5 +1,5 @@
 .resultday-container {
-	width: 90%;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 }
